# modelmeld

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  conftest.py  llms.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  release-please.yml  release.yml  security.yml
docs/: access-policy.md  api-stability.md  backends.md  design-anthropic-messages-api.md  dev-gpu.md  license-rationale.md  multi-tenant-isolation.md  open-core-boundary.md  registry-feed.md  routing-hints.md  self-host.md  subscription-passthrough-codex-feasibility.md  subscription-passthrough-codex-wire-format.md  subscription-passthrough.md  which-tier.md
docs/integrations/: README.md  aider.md  autogen.md  claude-code.md  cline.md  codex-cli.md  continue.md  crewai.md  cursor.md  langgraph.md  litellm.md  memory.md  metagpt.md  openclaw.md  opencode.md  zed.md
scripts/: validate_overlay.py  verify_boundary.py
src/modelmeld/: __init__.py  __main__.py  config.py  hooks.py  licensing.py  metrics.py
src/modelmeld/adapters/: __init__.py  anthropic_adapter.py  base.py  codex_passthrough.py  fireworks_adapter.py  openai_adapter.py  openrouter_adapter.py  retry.py  stub.py  tensorrt_llm_adapter.py  together_adapter.py  vllm_adapter.py
src/modelmeld/api/: __init__.py  _safe_error_detail.py  auth_detection.py  body_size_limit.py  byok.py  routing_hints.py  schemas.py  schemas_anthropic.py  schemas_responses.py  server.py  subscription_passthrough.py
src/modelmeld/api/routes/: chat.py  healthz.py  messages.py  metrics.py  models.py  responses.py  version.py
src/modelmeld/cache/: __init__.py  base.py  embedding.py  in_memory.py  semantic.py
src/modelmeld/cli/: __init__.py  __main__.py  doctor.py  setup.py
src/modelmeld/memory/: __init__.py  base.py  context.py  identity.py  in_memory.py  mem0_provider.py  postgres.py  provider.py  summarizer.py  tiers.py
src/modelmeld/privacy/: __init__.py  scrubber.py
src/modelmeld/router/: __init__.py  base.py  capability.py
src/modelmeld/scout/: __init__.py  base.py  capability.py  devtool.py  difficulty.py  feed.py  heuristics.py  multi_provider_registry.py  policy.py  registry.py  session_key.py  session_state.py  stall.py  task_category.py
src/modelmeld/scout/benchmarks/: __init__.py  aider_polyglot.py  artificial_analysis.py  base.py  livebench.py  lmarena.py  refresher.py
src/modelmeld/scout/data/: LICENSE.md  default_overlay.json  default_registry.json
src/modelmeld/tokens/: __init__.py  counter.py
src/modelmeld/translation/: __init__.py  openai_anthropic.py  openai_responses.py  responses_stream.py
tests/: test_adapter_anthropic.py  test_adapter_base.py  test_adapter_openai.py  test_adapter_retry.py  test_adapter_served_model.py  test_adapter_stub.py  test_adapter_tensorrt_llm.py  test_adapter_vllm.py  test_adapters_codex_passthrough.py  test_adapters_fireworks.py  test_adapters_together_openrouter.py  test_anthropic_reasoning_effort.py  test_api_smoke.py  test_auth_detection.py  test_benchmarks_additional_sources.py  test_benchmarks_artificial_analysis.py  test_benchmarks_composite.py  test_benchmarks_refresher.py  test_body_size_limit.py  test_byok.py  test_cache_embedding.py  test_cache_in_memory.py  test_cache_key.py  test_capability_routing_with_hints.py  test_chat_cache_wiring.py  test_chat_capability_routing.py  test_chat_memory_injection.py  test_chat_memory_integration.py  test_chat_token_counter_wiring.py  test_cli_doctor.py  test_cli_setup.py  test_cli_setup_onboarding.py  test_cli_setup_self_host.py  test_core_smoke.py  test_core_standalone.py  test_devtool_fingerprinter.py  test_difficulty.py  test_failover.py  test_hooks.py  test_license_headers.py  (+63 more)
tests/fixtures/: aa_response.py  aider_polyglot_fixture.py  livebench_fixture.py  lmarena_fixture.py  openai_requests.py  openai_responses.py  scout_corpus.py
