[build-system]
# hatchling unbounded above >=1.20. The earlier <1.28 ceiling was a
# workaround for the 0.6.2 publish failure: hatchling 1.30 emitted
# Metadata-Version 2.5, which the bundled twine inside
# gh-action-pypi-publish v1.12.3 couldn't validate. The publish action
# is now pinned to v1.14.0 (see .github/workflows/release.yml), whose
# bundled twine accepts 2.5+, so the hatchling cap is no longer needed.
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "modelmeld"
version = "0.10.3"
description = "AI gateway with capability-based routing across providers + bring-your-own-key passthrough. OpenAI- and Anthropic-compatible. Drop-in for Claude Code, Cursor, Aider, Cline, Continue."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["ai", "gateway", "llm", "proxy", "openai", "anthropic", "vllm", "modelmeld"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{ name = "ModelMeld and contributors" }]
# Minimum versions reflect a pip-audit clean baseline.
# Bump these when CVEs land against transitive deps.
dependencies = [
    "fastapi>=0.110",
    "starlette>=1.0.1",   # PYSEC-2026-161 fix (pulled in transitively by fastapi)
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",        # Aider Polyglot leaderboard format
    "cryptography>=42",   # Ed25519 license JWT verify
]

[project.optional-dependencies]
# Provider-specific extras. Install with `pip install modelmeld[openai,anthropic]`.
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.30"]
all-providers = ["openai>=1.40", "anthropic>=0.30"]
postgres = ["sqlalchemy[asyncio]>=2.0", "psycopg[binary]>=3.2"]
# Gateway-native memory backend (memory_backend="mem0"). Wraps the
# Apache-2.0 mem0 OSS core behind the MemoryProvider seam — the gateway
# does the request-path injection; mem0 does extraction + retrieval.
mem0 = ["mem0ai>=2.0,<3"]
# Cross-tokenizer counting. Provides accurate per-model token
# counts via tiktoken / anthropic / huggingface backends bundled by litellm.
tokenizer = ["litellm>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",   # property-based tests
    "ruff>=0.5",
    "pyright>=1.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "openai>=1.40",
    "anthropic>=0.30",
    "mem0ai>=2.0,<3",      # mem0 provider tests (memory_backend="mem0")
]
[project.scripts]
# Customer-facing CLI. `modelmeld setup --tool claude-code` is the
# one-command onboarding for Claude Code (cursor/aider/cline/continue
# post-launch). See modelmeld.cli.setup for the behavior contract.
modelmeld = "modelmeld.cli:main"

[project.urls]
Homepage = "https://github.com/ModelMeld/modelmeld"
Issues = "https://github.com/ModelMeld/modelmeld/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modelmeld"]

[tool.hatch.build.targets.sdist]
include = ["src/modelmeld", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# Ignored rules — pragmatic launch posture. Most are style preferences
# the codebase doesn't yet conform to; some are intentional patterns
# (ABC.close() without @abstractmethod is deliberate). Will re-enable
# individually as we tighten each area. Real correctness rules (F, most
# E, most B, most UP) stay enforced.
ignore = [
    "E501",   # line-too-long — long lines in error messages + URLs
    "E402",   # module import not at top of file (conditional imports)
    "E701",   # multiple statements on one line
    "E741",   # ambiguous variable name (legacy, low priority)
    "B017",   # assert raises Exception (test patterns)
    "B027",   # ABC.close() without @abstractmethod (intentional no-op pattern)
    "B904",   # raise from inside except (style preference)
    "N802",   # function name should be lowercase
    "N814",   # camelcase import as constant
    "N817",   # camelcase import as acronym
    "N818",   # exception name should end with Error
    "RUF002", # ambiguous unicode in docstring (em-dash, multiplication sign)
    "RUF003", # ambiguous unicode in comment
    "RUF043", # pytest.raises ambiguous pattern
    "SIM102", # collapsible if (subjective readability)
    "SIM105", # use contextlib.suppress (subjective readability)
    "SIM117", # multiple with statements (subjective readability)
    "UP007",  # use X | Y type annotations (Optional/Union still valid in 3.10)
]

[tool.pyright]
pythonVersion = "3.10"
# Strict mode is aspirational — we'd like `strict = ["src/modelmeld"]` once
# the codebase's type coverage is fully tightened. Until then we run pyright
# in default mode so CI stays green while we ramp up file by file.
# typeCheckingMode is "basic" by default; explicit here for clarity.
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
markers = [
    "requires_gpu: needs a live vLLM endpoint (skipped unless --gpu is passed)",
]
